--- a/docs/global.css
+++ b/docs/global.css
@@ -4,7 +4,3 @@ html, body {
     margin: 0;
     padding: 0;
 }
-
-body {
-    height: 100vh;
-}
